// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component :: Board :: index checks the initial state and verify if the board is empty 1`] = `
<main
  className="my-board"
>
  <input
    className="new-card hidden"
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="What needs to be done?"
    value=""
  />
  <button
    className="board add-card"
    onClick={[Function]}
  >
    Add another card
  </button>
</main>
`;

exports[`Component :: Board :: index displays the cards when a card is added 1`] = `
<main
  className="my-board"
>
  <input
    className="new-card hidden"
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="What needs to be done?"
    value=""
  />
  <div
    className="card"
  >
    <h3
      className="card-title"
    >
      My card
    </h3>
  </div>
  <button
    className="board add-card"
    onClick={[Function]}
  >
    Add another card
  </button>
</main>
`;

exports[`Component :: Board :: index remove the blank card and empty it when you press the escape button 1`] = `
<main
  className="my-board"
>
  <input
    className="new-card hidden"
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="What needs to be done?"
    value=""
  />
  <button
    className="board add-card"
    onClick={[Function]}
  >
    Add another card
  </button>
</main>
`;

exports[`Component :: Board :: index shows the blank card when you click on "Add an other card" button 1`] = `
<main
  className="my-board"
>
  <input
    className="new-card"
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="What needs to be done?"
    value=""
  />
  <button
    className="board add-card"
    onClick={[Function]}
  >
    Add another card
  </button>
</main>
`;
